project(unitTests)

################################################################################
# Includes
################################################################################

include_directories( . )

################################################################################
# Sources
################################################################################

set(TEST_SOURCES
	unitTests.cpp
)

################################################################################
# Targets
################################################################################

add_executable(unitTests ${TEST_SOURCES})

target_link_libraries(unitTests xenbemock)

################################################################################
# Libraries
################################################################################

add_test(NAME Test COMMAND unitTests)
