project(TestDrm)

################################################################################
# Includes
################################################################################

include_directories( . )

################################################################################
# Sources
################################################################################

set(TEST_DRM_SOURCES
	TestDisplay.cpp
	TestConnector.cpp
)

################################################################################
# Targets
################################################################################

add_library(test_drm OBJECT ${TEST_DRM_SOURCES})

################################################################################
# Libraries
################################################################################
