project(TestWayland)

################################################################################
# Includes
################################################################################

include_directories( . )

if(WITH_INPUT)
	include_directories(../../src/inputBackend)
endif()

if(WITH_ZCOPY)
	include_directories(${CMAKE_CURRENT_BINARY_DIR}/../../src/displayBackend/wayland/protocols)
endif()

################################################################################
# Sources
################################################################################

set(TEST_WAYLAND_SOURCES
	TestDisplay.cpp
)

################################################################################
# Targets
################################################################################

add_library(test_wayland OBJECT ${TEST_WAYLAND_SOURCES})

################################################################################
# Libraries
################################################################################
