project(DrmMock)

################################################################################
# Includes
################################################################################

include_directories( . )

################################################################################
# Sources
################################################################################

set(DRM_MOCK_SOURCES
	DrmMock.cpp
)

################################################################################
# Targets
################################################################################

add_library(drm_mock ${DRM_MOCK_SOURCES})

################################################################################
# Libraries
################################################################################
